# Fridge-To-recipe

./: .gitignore  Area.py  ML.py  README.md  SAM.py  chatgpt.py  classifier.py  extract.py  image_process.py  pyproject.toml  requirements.txt  sam.py  server.py  train_idx_to_class.yaml
classifier/: Dataset.py  main.py  pyproject.toml  test_idx_to_class.yaml  train.py  train_idx_to_class.yaml
docker/nvc/: Dockerfile  requirements.txt
notebook/: coco.ipynb  sam_experiment.ipynb
sh/: docker.sh  train.sh
static/: script.js  style.css
templates/: index.html  layout.html
yolo/: inference.py  train.py
