[tool.poetry]
name = "team18"
version = "0.1.0"
description = ""
authors = ["sugarl-sudo <sato.yuta0112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
supervision = "^0.20.0"
segment-anything = "^1.0"
flask = "^3.0.3"
torch = "2.0.0"
chatgpt = "^2.2212.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
