[tool.poetry]
name = "team18"
version = "0.1.0"
description = ""
authors = ["sugarl-sudo <sato.yuta0112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
